[tool.poetry]
name = "automated_learning"
version = "0.1.0"
description = ""
authors = ["Victor Uwaje <v.uwaje@enviosystems.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^25.1.0"
flake8 = "^7.1.2"
isort = "^6.0.1"
pytest = "^8.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
